manifests/python-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
  namespace: apps
  labels:
    app: python-app
    app.kubernetes.io/name: python-app
spec:
  type: ClusterIP
  selector:
    app: python-app
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
